force-app/main/default/objects/SSP_Message_Center_Configuration__mdt/SSP_Message_Center_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>SSP Message Center Configuration</label>
    <pluralLabel>SSP Message Center Configurations</pluralLabel>
</CustomObject>