force-app/main/default/objects/SSP_Message_Center_Configuration__mdt/fields/Applicable_Role__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Role__c</fullName>
    <label>Applicable Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>