force-app/main/default/objects/SSP_Message_Center_Configuration__mdt/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <label>Body</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>