force-app/main/default/objects/SSP_Message_Center_Configuration__mdt/fields/Body_Spanish__c.field-meta.xml
<CustomField>
    <fullName>Body_Spanish__c</fullName>
    <label>Body Spanish</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>