force-app/main/default/objects/SSP_Message_Center_Configuration__mdt/fields/Button_Alt_Text__c.field-meta.xml
<CustomField>
    <fullName>Button_Alt_Text__c</fullName>
    <label>Button Alt Text</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Click to upload documents</fullName>
                
                    <default>true</default>
                
                    <label>Click to upload documents</label>
                
                </value>
            
                <value>
                
                    <fullName>Click to renew benefits</fullName>
                
                
                    <label>Click to renew benefits</label>
                
                </value>
            
                <value>
                
                    <fullName>Click to call DCBS</fullName>
                
                
                    <label>Click to call DCBS</label>
                
                </value>
            
                <value>
                
                    <fullName>Click to pay your claim</fullName>
                
                
                    <label>Click to pay your claim</label>
                
                </value>
            
                <value>
                
                    <fullName>Click to continue the application</fullName>
                
                
                    <label>Click to continue the application</label>
                
                </value>
            
                <value>
                
                    <fullName>Click to view the notice</fullName>
                
                
                    <label>Click to view the notice</label>
                
                </value>
            
                <value>
                
                    <fullName>Click to Review and Consent</fullName>
                
                
                    <label>Click to Review and Consent</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>