force-app/main/default/objects/SSP_Message_Center_Configuration__mdt/fields/Communication_Body__c.field-meta.xml
<CustomField>
    <fullName>Communication_Body__c</fullName>
    <label>Communication Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>