force-app/main/default/objects/SSP_Message_Center_Configuration__mdt/fields/Communication_Body_Spanish__c.field-meta.xml
<CustomField>
    <fullName>Communication_Body_Spanish__c</fullName>
    <label>Communication Body Spanish</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>