force-app/main/default/objects/SSP_Message_Center_Configuration__mdt/fields/Due_Date_criterion__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_criterion__c</fullName>
    <label>Due Date criterion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>