force-app/main/default/objects/SSP_Message_Center_Configuration__mdt/fields/Expiry_Date_Criterion__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date_Criterion__c</fullName>
    <label>Expiry Date Criterion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>