force-app/main/default/objects/SSP_Message_Center_Configuration__mdt/fields/Mobile_Button_Action__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Button_Action__c</fullName>
    <label>Mobile Button Action </label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tel 8553068959</fullName>
                <default>true</default>
                <label>Tel 8553068959</label>
            </value>
            <value>
                <fullName>call to dcbs</fullName>
            </value>
            <value>
                <fullName>navigate user to Document Center</fullName>
            </value>
            <value>
                <fullName>navigate user to Renewal of Benefits screen</fullName>
            </value>
            <value>
                <fullName>navigate user to Claim Payments screen</fullName>
            </value>
            <value>
                <fullName>navigate user to Application Summary</fullName>
            </value>
            <value>
                <fullName>navigate user to Message Center with Notice tab selected</fullName>
            </value>
            <value>
                <fullName>navigate user to the assisted individual&apos;s Client View Dashboard</fullName>
            </value>
            <value>
                <fullName>navigate user to Renewal of assisted individual&apos;s Benefits screen</fullName>
            </value>
            <value>
                <fullName>opens Authorized Representative Access Request modal</fullName>
            </value>
            <value>
                <fullName>opens Assister Access Request modal</fullName>
            </value>
            <value>
                <fullName>navigate user to Hearing Summary</fullName>
            </value>
            <value>
                <fullName>call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>