force-app/main/default/objects/SSP_Message_Center_Configuration__mdt/fields/Mobile_Button_Name__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Button_Name__c</fullName>
    <label>Mobile Button Name</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Call DCBS</fullName>
                
                    <default>true</default>
                
                    <label>Call DCBS</label>
                
                </value>
            
                <value>
                
                    <fullName>Upload Documents</fullName>
                
                
                    <label>Upload Documents</label>
                
                </value>
            
                <value>
                
                    <fullName>Renew Benefits</fullName>
                
                
                    <label>Renew Benefits</label>
                
                </value>
            
                <value>
                
                    <fullName>Pay Claim</fullName>
                
                
                    <label>Pay Claim</label>
                
                </value>
            
                <value>
                
                    <fullName>Continue Application</fullName>
                
                
                    <label>Continue Application</label>
                
                </value>
            
                <value>
                
                    <fullName>View Notice</fullName>
                
                
                    <label>View Notice</label>
                
                </value>
            
                <value>
                
                    <fullName>Review &amp; Consent</fullName>
                
                
                    <label>Review &amp; Consent</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>