force-app/main/default/objects/SSP_Message_Center_Configuration__mdt/fields/Send_Reminder_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Send_Reminder_Criteria__c</fullName>
    <label>Send Reminder Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>