force-app/main/default/objects/SSP_Message_Center_Configuration__mdt/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Critical</fullName>
                
                    <default>true</default>
                
                    <label>Critical</label>
                
                </value>
            
                <value>
                
                    <fullName>Normal</fullName>
                
                
                    <label>Normal</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>