force-app/main/default/objects/SSP_Message_Center_Configuration__mdt/fields/Title_Spanish__c.field-meta.xml
<CustomField>
    <fullName>Title_Spanish__c</fullName>
    <label>Title Spanish</label>
    <length>255</length>
    <type>Text</type>
</CustomField>