force-app/main/default/objects/SSP_Message_Center_Configuration__mdt/fields/Trash_Action__c.field-meta.xml
<CustomField>
    <fullName>Trash_Action__c</fullName>
    <label>Trash Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>